--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
             "com.codeborne:selenide:$selenideVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
             "com.github.javafaker:javafaker:1.0.2",
+            "org.aeonbits.owner:owner:1.0.12",
             "org.junit.jupiter:junit-jupiter-api:$junitVersion")
     testRuntimeOnly(
             "org.slf4j:slf4j-simple:1.7.29",
@@ -39,6 +40,7 @@ tasks.withType(JavaCompile) {
 }
 
 tasks.withType(Test) {
+    systemProperties(System.getProperties())
     useJUnitPlatform()
 
     testLogging {
@@ -57,7 +59,9 @@ task smoke(type: Test) {
 }
 
 task properties_tests(type: Test) {
-    systemProperties(System.getProperties())
+
+    systemProperty("browserSize", System.getProperty("browserSize", "400x400"))
+
     println "[build.gradle] properties tests here"
     println System.getProperty("[build.gradle] browser")
 
