--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ tasks.withType(JavaCompile) {
 
 tasks.withType(Test) {
     systemProperties(System.getProperties())
+    systemProperty("url", System.getProperty("url","selenoid.autotests.cloud/wd/hub/"))
     useJUnitPlatform()
 
     testLogging {
@@ -58,14 +59,3 @@ task smoke(type: Test) {
     }
 }
 
-task properties_tests(type: Test) {
-
-    systemProperty("browserSize", System.getProperty("browserSize", "400x400"))
-
-    println "[build.gradle] properties tests here"
-    println System.getProperty("[build.gradle] browser")
-
-    useJUnitPlatform {
-        includeTags 'properties'
-    }
-}
